--- a/switch/index.html
+++ b/switch/index.html
@@ -48,8 +48,8 @@ n@hardwork.party -->
  
         var ws;
  
-        var HOST = 'localhost';
-        var PORT = 7777;
+        var HOST = '127.0.1.1';
+        var PORT = 8888;
         var URI = '/ws';
 
         var override = false;
